working on disign

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;400;500;600&display=swap");
+
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: "IBM Plex Sans Thai Looped", sans-serif;
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #eee;
+}
+
+main {
+  max-width: 1024px;
+  margin: auto;
 }
