--- a/src/components/contact/ContactUs.module.css
+++ b/src/components/contact/ContactUs.module.css
@@ -40,6 +40,7 @@
   font: inherit;
   font-size: 1.5rem;
   border: 1px solid #aaa;
+  color: #444;
   border-radius: 0.8rem;
   outline: none;
   background: transparent;
