--- a/src/components/Blogs/BlogItem.module.css
+++ b/src/components/Blogs/BlogItem.module.css
@@ -1,9 +1,11 @@
 .blog_item {
   /* background-color: red; */
+  max-width: 300px;
 }
 
 .blog_item img {
   width: 100%;
+  max-height: 30rem;
 }
 
 .creator {
@@ -48,6 +50,8 @@
 
 .btn {
   background-color: #750bb0;
+  text-decoration: none;
+  font-size: 1.2rem;
   border: none;
   padding: 1rem 2rem;
   color: #fff;
