--- a/src/components/Blogs/ListItems.module.css
+++ b/src/components/Blogs/ListItems.module.css
@@ -1,9 +1,16 @@
 .list_items {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-column-gap: 3rem;
   grid-row-gap: 5rem;
   padding-bottom: 5rem;
+}
+
+@media (max-width: 1200px) {
+  .list_items_container {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
 
 .categories {
@@ -15,7 +22,6 @@
   overflow: hidden;
   /* background-color: red; */
 }
-
 
 .categories li {
   margin-right: 2rem;
