added form validation

--- a/src/components/contact/ContactUs.module.css
+++ b/src/components/contact/ContactUs.module.css
@@ -66,3 +66,12 @@
     width: 90%;
   }
 }
+
+.invalid {
+  background-color: #fddddd !important;
+  border-color: #ff9898 !important;
+}
+
+.error_message {
+  color: #ff7777;
+}
