--- a/src/components/Blogs/BlogItem.module.css
+++ b/src/components/Blogs/BlogItem.module.css
@@ -22,14 +22,16 @@
 
 .headline {
   font-size: 1.5rem;
-  max-height: 5rem;
+  max-height: 2.5rem;
   overflow: hidden;
-  text-overflow: ellipsis;
   margin-bottom: 0.5rem;
+  text-overflow: ellipsis;
+  display: inline-block;
 }
 
 .post_text {
   font-size: 1.1rem;
+  height: 7rem;
   max-height: 7rem;
   overflow: hidden;
   text-overflow: ellipsis;
